force-app/main/default/objects/nRetail__Debt__c/nRetail__Debt__c.object-meta.xml
<CustomObject>
    <description>-DEPRECATED- The debt object stores information about an applicant&apos;s debts.</description>
    <label>-D Debt</label>
    <nameField>
        <label>Debt Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Debts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>