force-app/main/default/objects/nRetail__Debt__c/fields/nRetail__Account__c.field-meta.xml
<CustomField>
    <fullName>nRetail__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is optional and represents the account to which this debt belongs.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Debts</relationshipLabel>
    <relationshipName>Debts</relationshipName>
    <type>Lookup</type>
</CustomField>