force-app/main/default/objects/nRetail__Debt__c/fields/nRetail__Available_Amount__c.field-meta.xml
<CustomField>
    <fullName>nRetail__Available_Amount__c</fullName>
    <description>This field is optional and represents the amount available to borrow on the debt.</description>
    <label>Available Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>