force-app/main/default/objects/nRetail__Debt__c/fields/nRetail__Contact__c.field-meta.xml
<CustomField>
    <fullName>nRetail__Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This field is optional and is the contact who has this debt.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Debts</relationshipLabel>
    <relationshipName>Debts</relationshipName>
    <type>Lookup</type>
</CustomField>