force-app/main/default/objects/nRetail__Debt__c/fields/nRetail__Exclude__c.field-meta.xml
<CustomField>
    <fullName>nRetail__Exclude__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field determines if this debt is excluded from total debt calculations.</description>
    <label>Exclude</label>
    <type>Checkbox</type>
</CustomField>