force-app/main/default/objects/nRetail__Debt__c/fields/nRetail__Loan__c.field-meta.xml
<CustomField>
    <fullName>nRetail__Loan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is required and represents the loan this debt is tied to.</description>
    <label>Loan</label>
    <referenceTo>LLC_BI__Loan__c</referenceTo>
    <relationshipLabel>Debts</relationshipLabel>
    <relationshipName>Debts</relationshipName>
    <type>Lookup</type>
</CustomField>