force-app/main/default/objects/nRetail__Debt__c/fields/nRetail__Maturity_Date__c.field-meta.xml
<CustomField>
    <fullName>nRetail__Maturity_Date__c</fullName>
    <description>This field is optional and represents the date on which the debt matures.</description>
    <label>Maturity Date</label>
    <type>Date</type>
</CustomField>