force-app/main/default/objects/nRetail__Debt__c/fields/nRetail__Monthly_Payment__c.field-meta.xml
<CustomField>
    <fullName>nRetail__Monthly_Payment__c</fullName>
    <description>This field is required and represents the amount paid on the debt every month.</description>
    <label>Monthly Payment</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>