force-app/main/default/objects/nRetail__Debt__c/fields/nRetail__New_Debt__c.field-meta.xml
<CustomField>
    <fullName>nRetail__New_Debt__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This optional, admin-facing field auto-populates when a debt is created from a selected pricing option. It is used primarily for auditing purposes.</description>
    <label>New Debt</label>
    <type>Checkbox</type>
</CustomField>