force-app/main/default/objects/nRetail__Debt__c/fields/nRetail__Original_Amount__c.field-meta.xml
<CustomField>
    <fullName>nRetail__Original_Amount__c</fullName>
    <description>This field is optional and specifies the full original amount of the loan. (If the loan is pending approval, this is the intended amount for the loan.)</description>
    <label>Original Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>