force-app/main/default/objects/nRetail__Debt__c/fields/nRetail__Pricing_Option__c.field-meta.xml
<CustomField>
    <fullName>nRetail__Pricing_Option__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>-DEPRECATED- Use New_Debt__c field</description>
    <label>-D Pricing Option</label>
    <referenceTo>nRetail__Pricing_Option__c</referenceTo>
    <relationshipLabel>Debts</relationshipLabel>
    <relationshipName>Debts</relationshipName>
    <type>Lookup</type>
</CustomField>