force-app/main/default/objects/nRetail__Debt__c/fields/nRetail__Principal_Balance__c.field-meta.xml
<CustomField>
    <fullName>nRetail__Principal_Balance__c</fullName>
    <description>This field is optional and represents the amount of principal remaining on the debt.</description>
    <label>Principal Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>